apps/radarr/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: radarr
  template:
    metadata:
      labels:
        run: radarr
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: radarr
          image: linuxserver/radarr
          name: radarr
          ports:
            - containerPort: 7878
              name: webui
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:7878/radarr/api/v3/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 60
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:7878/radarr/api/v3/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: "/config"
              name: config
            - mountPath: "/downloads"
              name: downloads
            - mountPath: "/media"
              name: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-iscsi
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
